--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 
         <!-- Mission statement -->
         <div class="mission-statement">
-
+          <h2>Our Mission</h2>
+          <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
         </div>
 
       </div>
@@ -37,31 +38,62 @@
       <div class="specials-section">
         <h2>Tea of the Month</h2>
         <h4>What's Steeping at the Tea Cozy?</h4>
-        <div class="featured">
+        <div class="featured" id="berry">
+          <img src="./resources/images/img-berryblitz.jpg">
+          <span class="caption">Fall Berry Blitz Tea</span>
         </div>
-        <div class="featured">
+        <div class="featured" id="rum">
+          <img src="./resources/images/img-spiced-rum.jpg">
+          <span class="caption">Spiced Rum Tea</span>
         </div>
-        <div class="featured">
+        <div class="featured" id="donuts">
+          <img src="./resources/images/img-donut.jpg">
+          <span class="caption">Seasonal Donuts</span>
         </div>
-        <div class="featured">
+        <div class="featured" id="myrtle">
+          <img src="./resources/images/img-myrtle-ave.jpg">
+          <span class="caption">Myrtle Ave Tea</span>
         </div>
-        <div class="featured">
+        <div class="featured" id="bedford">
+          <img src="./resources/images/img-bedford-bizarre.jpg">
+          <span class="caption">Bedford Bizarre Tea</span>
         </div>
       </div>
 
       <div class=locations>
         <h2>Locations</h2>
-        <div class="location">
+
+        <div class="location" id="downtown">
+          <h3>Downtown</h3>
+          <p>384 West 4th Street</p>
+          <p>Suite 108</p>
+          <p>Portland, Maine</p>
+
         </div>
-        <div class="location">
+
+        <div class="location" id="east bayside">
+          <h3>East Bayside</h3>
+          <p>3433 Phisherman's Avenue</p>
+          <p>(Northwest Corner)</p>
+          <p>Portland, Maine</p>
+
         </div>
-        <div class="location">
+
+        <div class="location" id="oakdale">
+          <h3>Oakdale</h3>
+          <p>515 Crescent Avenue</p>
+          <p>Second Floor</p>
+          <p>Portland, Maine</p>
+
         </div>
+
       </div>
 
       <div class=contact>
         <h2>The Tea Cozy</h2>
         <div class="contact-info">
+          <h5>contact@theteacozy.com</h5>
+          <p>917-555-8904</p>
         </div>
       </div>
 
