Final code for project submission

--- a/index.html
+++ b/index.html
@@ -9,92 +9,121 @@
   <body>
 
     <header>
+
       <div class="logo">
         <img src="./resources/images/img-tea-cozy-logo.png">
-        <span></span>
       </div>
+
       <nav>
         <span><a href="./">Mission</a></span>
         <span><a href="./">Featured Tea</a></span>
         <span><a href="./">Locations</a></span>
       </nav>
+
     </header>
 
     <!-- Main content container -->
     <div class="content">
 
-      <!-- Mission section -->
+      <!-- Hero mission section -->
       <div class="mission-section">
 
         <!-- Mission statement -->
-        <div class="mission-statement">
+        <div  class="mission-statement">
           <h2>Our Mission</h2>
           <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
         </div>
-
       </div>
 
       <!-- Tea specials section -->
-      <div class="specials-section">
-        <h2>Tea of the Month</h2>
-        <h4>What's Steeping at the Tea Cozy?</h4>
-        <div class="featured" id="berry">
-          <img src="./resources/images/img-berryblitz.jpg">
-          <span class="caption">Fall Berry Blitz Tea</span>
-        </div>
-        <div class="featured" id="rum">
-          <img src="./resources/images/img-spiced-rum.jpg">
-          <span class="caption">Spiced Rum Tea</span>
-        </div>
-        <div class="featured" id="donuts">
-          <img src="./resources/images/img-donut.jpg">
-          <span class="caption">Seasonal Donuts</span>
-        </div>
-        <div class="featured" id="myrtle">
-          <img src="./resources/images/img-myrtle-ave.jpg">
-          <span class="caption">Myrtle Ave Tea</span>
-        </div>
-        <div class="featured" id="bedford">
-          <img src="./resources/images/img-bedford-bizarre.jpg">
-          <span class="caption">Bedford Bizarre Tea</span>
-        </div>
-      </div>
+      <div class="tea-section">
 
-      <div class=locations>
-        <h2>Locations</h2>
+        <div id="featured-container">
 
-        <div class="location" id="downtown">
-          <h3>Downtown</h3>
-          <p>384 West 4th Street</p>
-          <p>Suite 108</p>
-          <p>Portland, Maine</p>
+          <h2>Tea of the Month</h2>
+          <h4>What's Steeping at the Tea Cozy?</h4>
 
-        </div>
+          <!-- Image gallery of featured teas -->
+          <div class="featured-gallery">
 
-        <div class="location" id="east bayside">
-          <h3>East Bayside</h3>
-          <p>3433 Phisherman's Avenue</p>
-          <p>(Northwest Corner)</p>
-          <p>Portland, Maine</p>
+            <div class="featured">
+              <img src="./resources/images/img-berryblitz.jpg">
+              <h4>Fall Berry Blitz Tea</h4>
+            </div>
 
-        </div>
+            <div class="featured">
+              <img src="./resources/images/img-spiced-rum.jpg">
+              <h4>Spiced Rum Tea</h4>
+            </div>
 
-        <div class="location" id="oakdale">
-          <h3>Oakdale</h3>
-          <p>515 Crescent Avenue</p>
-          <p>Second Floor</p>
-          <p>Portland, Maine</p>
+            <div class="featured">
+              <img src="./resources/images/img-donut.jpg">
+              <h4>Seasonal Donuts</h4>
+            </div>
+
+            <div class="featured">
+              <img src="./resources/images/img-myrtle-ave.jpg">
+              <h4>Myrtle Ave Tea</h4>
+            </div>
+
+            <div class="featured">
+              <img src="./resources/images/img-bedford-bizarre.jpg">
+              <h4>Bedford Bizarre Tea</h4>
+            </div>
+
+          </div>
 
         </div>
 
       </div>
 
+      <!-- Location section -->
+      <div class=location-section>
+
+
+        <div id="location-container">
+          <h2>Locations</h2>
+
+
+        <!-- Gallery of locations -->
+        <div class=location-gallery>
+
+          <div class="location-box">
+            <h3>Downtown</h3>
+            <p>384 West 4th Street</p>
+            <p>Suite 108</p>
+            <p>Portland, Maine</p>
+          </div>
+
+          <div class="location-box">
+            <h3>East Bayside</h3>
+            <p>3433 Phisherman's Avenue</p>
+            <p>(Northwest Corner)</p>
+            <p>Portland, Maine</p>
+          </div>
+
+          <div class="location-box">
+            <h3>Oakdale</h3>
+            <p>515 Crescent Avenue</p>
+            <p>Second Floor</p>
+            <p>Portland, Maine</p>
+          </div>
+
+        </div>
+        </div>
+      </div>
+
+      <!-- Contact info -->
       <div class=contact>
+
         <h2>The Tea Cozy</h2>
+
         <div class="contact-info">
           <h5>contact@theteacozy.com</h5>
-          <p>917-555-8904</p>
+          <h5>917-555-8904</h5>
+
         </div>
+
       </div>
 
     </div>
@@ -102,7 +131,7 @@
     <footer>
 
       <div class="copyright">
-        copyright The Tea Cozy 2017
+        <h5>copyright The Tea Cozy 2017</h5>
       </div>
 
     </footer>
